--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -11,6 +11,8 @@
     <h1>This Is Me!</h1>
     <img src="images/myAvatar.png" height="250">
    <h2>Background</h2>
-    <p1>I am 17 years old.</p1>
+    <p1> My names is Johana Diaz and I'm a student at The Palmdale
+        Aerospace Acadmey.</p1>
 	  </body>
 	</html> 
+	
