--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -1,5 +1,6 @@
 <!doctype html>
 	<html lang="en">
+ <body style="background-color:hsl(0, 100%, 90%);">
 	  <head>
 	    <meta charset="utf-8">
 	    <title>About Me</title>
