--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<body style="background-color:hsl(0, 100%, 90%);">
   <head>
     <meta charset="utf-8">
     <title>Home</title>
@@ -8,7 +9,8 @@
     <a href="index.html">Home</a>
     <a href="aboutme.html">About Me</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>This is Johana's Home Page!</h1>
+    <h1>Home Page</h1>
+    <h3>Johana Diaz, Period 5</h3>
     <img src="images/home.jpg" height="250">
   </body>
 </html>
