--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -9,7 +9,7 @@
     <a href="index.html">Home</a>
     <a href="aboutme.html">About Me</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>This is my Portfolio Page!</h1>
+    <h1>My Portfolio</h1>
     <img src="images/portfolio.jpg" height="250">
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
