--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -10,8 +10,7 @@
     <a href="aboutme.html">About Me</a>
     <a href="portfolio.html">Portfolio</a>
     <h1>My Portfolio</h1>
-    <img src="images/portfolio.jpg" height="250">
-    <br>
+    <img src="images/computerscience.png" height="250">
     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
     </a>
