--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -11,15 +11,14 @@
     <a href="portfolio.html">Portfolio</a>
     <h1>My Portfolio</h1>
     <img src="images/computerscience.png" height="250">
+  
    <br>
     <img src="images/gamept.2.PNG" height="250">
     <img src="images/game pt.1.PNG" height="250">
     
     <br>
-    <a target="_blank" href="https:/scratch.mit.edu">
+     <a target="_blank" href="https://scratch.mit.edu">
       <img src="images/scratchlogo.png" height="100">
     </a>
-
-    
 	  </body>
 	</html>
