--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -11,8 +11,10 @@
     <a href="portfolio.html">Portfolio</a>
     <h1>This Is Me!</h1>
    <h2>Background</h2>
+   <img src="images/myAvatar.png" height="250">
     <p1> My names is Johana Diaz and I'm a student at The Palmdale
-        Aerospace Acadmey.</p1>
+        Aerospace Acadmey. I am a senior (part of class of 2020) and
+        am a memember of CSF, Key Club and Link Crew. </p1>
 	  </body>
 	</html> 
 	
