--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -1,7 +1,8 @@
 <!doctype html>
 	<html lang="en">
- <body style="background-color:hsl(0, 100%, 90%);">
+ <body style="background-color:hsl(0, 100%, 100%);">
 	  <head>
+	      </style>
 	    <meta charset="utf-8">
 	    <title>About Me</title>
 	  </head>
@@ -11,11 +12,10 @@
     <a href="portfolio.html">Portfolio</a>
     <h1>This Is Me!</h1>
    <h2>Background</h2>
-   <img src="images/myAvatar.png" height="250">
+   <img src="images/tpaalogo.jpg" height="100"> <img src="images/school.jpg" height="100">
+   
+  <br> <p1> My name is Johana and I'm a student at the Palmdale Aerospace Academy. </p1>
   
-    <p1> My names is Johana Diaz and I'm a student at The Palmdale
-        Aerospace Acadmey. I am a senior (part of class of 2020) and
-        am a memember of CSF, Key Club and Link Crew. </p1>
 	  </body>
 	</html> 
 	
