we customized it

--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
-<body style="background-color:hsl(0, 100%, 100%);">
-  <head>
+<body>
     <meta charset="utf-8">
     <title>Home</title>
   </head>
@@ -9,9 +8,12 @@
     <a href="index.html">Home</a>
     <a href="aboutme.html">About Me</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>Home Page</h1>
-    <h3>Johana Diaz, Period 5</h3>
-    <img src="images/home.jpg" height="250">
+    <br>
+    <br>
+    <br>
+     <img src="images/welcome.png" height="450">
+     <h3>Johana Diaz, Period 5</h3>
+</style>
   </body>
 </html>
 
