--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+  <body style="background-color:rgba(255, 99, 71, 0.5);">
 <body>
     <meta charset="utf-8">
     <title>Home</title>
