--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -1,6 +1,6 @@
 <!doctype html>
 	<html lang="en">
-	  <body style="background-color:hsl(0, 100%, 100%);">
+	  <body style="background-color:rgba(255, 99, 71, 0.5);">
 	  <head>
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
