--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -9,16 +9,15 @@
     <a href="index.html">Home</a>
     <a href="aboutme.html">About Me</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>My Portfolio</h1>
-    <img src="images/computerscience.png" height="250">
-  
-   <br>
-    <img src="images/gamept.2.PNG" height="250">
-    <img src="images/game pt.1.PNG" height="250">
-    
+    <h1>Portfolio</h1>
     <br>
-     <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.png" height="100">
+   <div style="border: 1px solid black">1.1.7 Scratch Project
+<pre> 
+  Go help Laura escape TPAA, be careful, your choices determine her future.
+  (Mrs. Reyes is portrayed the way she is for comedic purposes)</pre>
     </a>
+    <img src="images/gamept.2.PNG" height="200"> <img src="images/game pt.1.PNG" height="200"> 
+    <p><a href="https://scratch.mit.edu/projects/327037990">Help Laura Escape</a></p>
+    </div>
 	  </body>
 	</html>
