--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -10,12 +10,23 @@
     <a href="index.html">Home</a>
     <a href="aboutme.html">About Me</a>
     <a href="portfolio.html">Portfolio</a>
-    <h1>This Is Me!</h1>
-   <h2>Background</h2>
-   <img src="images/tpaalogo.jpg" height="100"> <img src="images/school.jpg" height="100">
-   
-  <br> <p1> My name is Johana and I'm a student at the Palmdale Aerospace Academy. </p1>
-  
+    <br>
+    <br>
+    <br>
+   <div style="border: 1px solid black">About Me
+  <pre>
+       My name is Johana Diaz and I'm a student at the Palmdale Aerospace Academy.
+
+       I'm currently a senior and part of Link Crew (aka I pulled little Billy's
+       out of cars).
+       
+       I want to be a lawyer in the future so I don't really know why I'm at an 
+       engineering school, but its cool I guess.
+       
+       Oh, I like to paint :)
+    </pre>
+      </div>
+
 	  </body>
 	</html> 
 	
