--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -16,7 +16,7 @@
   Go help Laura escape TPAA, be careful, your choices determine her future.
   (Mrs. Reyes is portrayed the way she is for comedic purposes)</pre>
     </a>
-    <img src="images/gamept.2.PNG" height="200"> <img src="images/game pt.1.PNG" height="200"> 
+    <img src="images/gamept.2.PNG" height="200"> <img src="images/gamept.3.png" height="200"> 
     <p><a href="https://scratch.mit.edu/projects/327037990">Help Laura Escape</a></p>
     </div>
 	  </body>
