changed the backgrounds

--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -1,10 +1,5 @@
 <!doctype html>
 	<html lang="en">
- <body style="background-color:rgba(255, 99, 71, 0.5);">
-	  <head>
-	      </style>
-	    <meta charset="utf-8">
-	    <title>About Me</title>
 	  </head>
 	  <body>
     <a href="index.html">Home</a>
@@ -23,7 +18,7 @@
        I want to be a lawyer in the future so I don't really know why I'm at an 
        engineering school, but its cool I guess.
        
-       Oh, I like to paint :)
+       I like to paint but I'm a perfectionist so that makes for an interesting combintation.
     </pre>
       </div>
 
