added my new project

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -16,5 +16,16 @@
     <img src="images/gamept.2.PNG" height="200"> <img src="images/gamept.3.png" height="200"> 
     <p><a href="https://scratch.mit.edu/projects/327037990">Help Laura Escape</a></p>
     </div>
+    
+    <br>
+     <div style="border: 1px solid black">1.2.6 App Project
+  <pre> 
+   We all love spooky season, but what is equally as good as spooky season??? 
+   CHRISTMASSSS!
+   Use the soundboard and listen to some of your favorite holiday sounds!</pre>
+    </a>
+    <img src="images/gamept.2.PNG" height="200"> <img src="images/gamept.3.png" height="200"> 
+    <p><a href="https://scratch.mit.edu/projects/327037990">Christmas Sound Board</a></p>
+    </div>
 	  </body>
 	</html>
