changed the borders again

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -8,7 +8,7 @@
     <a href="portfolio.html">Portfolio</a>
     <h1>Portfolio</h1>
     <br>
-   <div style="border: 1x solid black">1.1.7 Scratch Project
+   <div style="border: 1px solid black">1.1.7 Scratch Project
 <pre> 
   Go help Laura escape TPAA, be careful, your choices determine her future.
   (Mrs. Reyes is portrayed the way she is for comedic purposes)</pre>
@@ -18,7 +18,7 @@
     </div>
     
     <br>
-    <div style="border: 1x solid black">1.2.6 App Project
+   <div style="border: 1px solid black">1.2.6 App Project
   <pre> 
    We all love spooky season, but what is equally as good as spooky season??? 
    CHRISTMASSSS!
