added app pictures

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -24,7 +24,7 @@
    CHRISTMASSSS!
    Use the soundboard and listen to some of your favorite holiday sounds!</pre>
     </a>
-    <img src="images/gamept.2.PNG" height="200"> <img src="images/gamept.3.png" height="200"> 
+   <img src="images/app.PNG" height="200"> <img src="images/code.PNG" height="200">
     <p><a href="https://scratch.mit.edu/projects/327037990">Christmas Sound Board</a></p>
     </div>
 	  </body>
