added new items

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -20,12 +20,12 @@
     <br>
    <div style="border: 1px solid black">1.2.6 App Project
   <pre> 
-   We all love spooky season, but what is equally as good as spooky season??? 
-   CHRISTMASSSS!
-   Use the soundboard and listen to some of your favorite holiday sounds!</pre>
+   We all love playing games, but when I was making it I was struggling.
+   So now we have the sound board.
+   Use the soundboard and listen to some of the most well known sounds!</pre>
     </a>
    <img src="images/app.PNG" height="200"> <img src="images/code.PNG" height="200">
-    <p><a href="https://scratch.mit.edu/projects/327037990">Christmas Sound Board</a></p>
+    <p><a href="https://ai2.appinventor.mit.edu/?galleryId=4991849925836800">Random Sound Board</a></p>
     </div>
 	  </body>
 	</html>
