changed the website link

--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -25,7 +25,7 @@
    Use the soundboard and listen to some of the most well known sounds!</pre>
     </a>
    <img src="images/app.PNG" height="200"> <img src="images/code.PNG" height="200">
-    <p><a href="https://ai2.appinventor.mit.edu/?galleryId=4991849925836800">Random Sound Board</a></p>
+    <p><a href="http://ai2.appinventor.mit.edu/?galleryId=4991849925836800">Random Sound Board</a></p>
     </div>
 	  </body>
 	</html>
